# garage-teams

./: .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  RELEASE_NOTES.md  SECURITY.md  ahe-workflow-skill-anatomy.md  pyproject.toml  skill-anatomy.md  skills-lock.json  task-progress.md
.agents/: README.md
.agents/skills/: ahe-coding-skills  hf-bug-patterns  hf-code-review  hf-completion-gate  hf-design  hf-design-review  hf-discovery-review  hf-finalize  hf-hotfix  hf-increment  hf-product-discovery  hf-regression-gate  hf-spec-review  hf-specify  hf-tasks  hf-tasks-review  hf-test-driven-dev  hf-test-review  hf-traceability-review  hf-ui-design  hf-ui-review  hf-workflow-router  using-hf-workflow
.cursor/plans/: optimize_ahe-bug-patterns_20260405.plan.md  optimize_ahe-completion-gate_20260405.plan.md  optimize_ahe-design_20260405.plan.md  optimize_ahe-finalize_20260405.plan.md  optimize_ahe-regression-gate_20260405.plan.md  optimize_ahe-spec-review_20260405.plan.md  optimize_ahe-tasks-review_20260405.plan.md  optimize_ahe-tasks_20260405.plan.md  optimize_ahe-test-review_20260405.plan.md  optimize_ahe-workflow-starter_20260405.plan.md
.cursor/skills/: refer-skills
.garage/: README.md
.garage/benchmark/: baseline-20260416.json
.garage/blog/: 2026-04-17-ai-meets-old-software-engineering.md  v2-revision-notes.md
.garage/config/: host-adapter.json  platform.json
.garage/contracts/: error-handler-interface.yaml  host-adapter-interface.yaml  knowledge-store-interface.yaml  session-manager-interface.yaml  skill-executor-interface.yaml  state-machine-interface.yaml  tool-registry-interface.yaml  version-manager-interface.yaml
.github/workflows/: test.yml
ahe-coding-skills/: README.md
ahe-coding-skills/ahe-bug-patterns/: SKILL.md
ahe-coding-skills/ahe-finalize/: SKILL.md
ahe-coding-skills/ahe-hotfix/: SKILL.md
ahe-coding-skills/ahe-specify/: SKILL.md
ahe-coding-skills/ahe-test-driven-dev/: SKILL.md
ahe-coding-skills/templates/: task-progress-template.md
ahe-coding-skills/using-ahe-workflow/: SKILL.md
ahe-product-skills/ahe-concept-shaping/: SKILL.md
ahe-product-skills/ahe-insight-mining/: SKILL.md
ahe-product-skills/ahe-opportunity-mapping/: SKILL.md
ahe-product-skills/ahe-outcome-framing/: SKILL.md
ahe-se-skills/: README.md
archives/: README.md
artifacts/: README.md
designs/: automotive-embedded-harness-engineering-framework-design.md  high-assurance-embedded-harness-engineering-framework-design.md
docs/: GARAGE.md  OpenSpec-main-harness-engineering-analysis.md  README.md  ROADMAP.md  VISION.md  agent-skills-main-vs-ahe-workflow-report.md  ahe-command-entrypoints.md  ahe-p0-batch-verification.md  ahe-p1-optional-assets-decision.md  ahe-path-mapping-guide.md  ahe-review-persona-matrix.md  ahe-review-subagent-implementation-checklist.md  ahe-review-subagent-optimization-plan.md  ahe-workflow-core-vs-extensions.md  ahe-workflow-entrypoint-replacement-plan.md  ahe-workflow-entrypoints.md  ahe-workflow-externalization-guide.md  ahe-workflow-family-optimization-execution-plan.md  ahe-workflow-multi-agent-operating-model-design.md  ahe-workflow-shared-conventions.md  ahe-workflow-skill-anatomy.md  ahe-workflow-skill-gap-matrix.md  everything-claude-code-main-harness-engineering-analysis.md  get-shit-done-main-harness-engineering-analysis.md  gstack-main-harness-engineering-analysis.md  longtaskforagent-main-harness-engineering-analysis.md  mdc-series-gap-analysis-refresh.md  mdc-workflow-multi-agent-operating-model-design.md  superpowers-main-harness-engineering-analysis.md
evidence/: README.md
garage/: README.md
mdc-workflow/: AGENTS-template.md  README.md  coding-skills-design.md
packs/: README.md
scripts/: benchmark.py  migration_test.py  release_smoke.py  security_audit.py  setup-agent-skills.sh  skill_mining_perf_smoke.py  verify-structure.sh  workflow_recall_perf_smoke.py
sessions/: README.md
skills/: README.md  ahe-skills-design.md  design_rules.md
src/: foundation.py
templates/: AGENTS-template.md  task-progress-template.md  verification-record-template.md
tests/: __init__.py  conftest.py  test_bootstrap.py  test_bridge_workflow.py  test_cli.py  test_contract_registry.py  test_core_records.py  test_documentation.py  test_execution_runtime.py  test_filebacked_surfaces.py  test_foundation.py  test_growth_engine.py  test_install_layout.py  test_profile_loader.py  test_reference_pack_shells.py  test_runtime_ops.py  test_session_governance.py  test_types.py
workflow-skills/: mdc-skills-design.md  sdd-manual-test-checklist.md  sdd-scenario-01-simulation-report.md  sdd-scenario-02-simulation-report.md  sdd-scenario-03-simulation-report.md  sdd-scenario-04-simulation-report.md  sdd-scenario-05-simulation-report.md  sdd-skills-eval-prompts.md
(+1434 files in other folders)
