[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "garage-runtime"
version = "0.1.0"
description = "Garage runtime scaffolding, core records, and contract registry."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
garage = "bootstrap.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["foundation"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
