[tool.poetry]
name = "garage-os"
version = "0.1.0"
description = "Garage Agent — local-first home for agent skills, knowledge, and experience"
authors = ["Garage Contributors"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/hujianbest/garage-agent"
repository = "https://github.com/hujianbest/garage-agent"
documentation = "https://github.com/hujianbest/garage-agent/blob/main/README.md"
keywords = [
    "agent",
    "ai",
    "skills",
    "knowledge-management",
    "claude-code",
    "cursor",
    "opencode",
    "local-first",
    "solo-creator",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
packages = [
    { include = "garage_os", from = "src" }
]
include = [
    "LICENSE",
    "AGENTS.md",
    "RELEASE_NOTES.md",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/hujianbest/garage-agent/issues"
"Release Notes" = "https://github.com/hujianbest/garage-agent/blob/main/RELEASE_NOTES.md"
"Source Code" = "https://github.com/hujianbest/garage-agent"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0"
filelock = "^3.13"
atomicwrites = "^1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.7"
ruff = "^0.1"
pre-commit = "^3.5"

[tool.poetry.scripts]
garage = "garage_os.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "yaml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "atomicwrites.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
